holy changes. proj 1 works

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+application.args=127.0.0.1 5001
 compile.on.save=true
-user.properties.file=C:\\Users\\B\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=/Users/lsirdevan/Library/Application Support/NetBeans/8.2/build.properties
